게시판 수정

--- a/project/projectosori/osoriapp/templates/fashionboard.html
+++ b/project/projectosori/osoriapp/templates/fashionboard.html
@@ -46,8 +46,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link collapsed" href="#">
                     
                     <span> 패션 트렌드</span>
                 </a>
